// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProForm 📦 submit props actionsRender is one 1`] = `
<form
  autocomplete="off"
  class="ant-form ant-form-vertical"
>
  <input
    style="display: none;"
    type="text"
  />
  <a>
    test
  </a>
</form>
`;

exports[`ProForm 📦 submit props actionsRender=()=>[] 1`] = `
<form
  autocomplete="off"
  class="ant-form ant-form-vertical"
>
  <input
    style="display: none;"
    type="text"
  />
</form>
`;

exports[`ProForm 📦 submit props actionsRender=()=>false 1`] = `
<form
  autocomplete="off"
  class="ant-form ant-form-vertical"
>
  <input
    style="display: none;"
    type="text"
  />
</form>
`;

exports[`ProForm 📦 submit props actionsRender=false 1`] = `
<form
  autocomplete="off"
  class="ant-form ant-form-vertical"
>
  <input
    style="display: none;"
    type="text"
  />
</form>
`;

exports[`ProForm 📦 submit props actionsRender=false 2`] = `
<form
  autocomplete="off"
  class="ant-form ant-form-vertical"
>
  <input
    style="display: none;"
    type="text"
  />
</form>
`;

exports[`ProForm 📦 submit props render=()=>[] 1`] = `
<form
  autocomplete="off"
  class="ant-form ant-form-vertical"
>
  <input
    style="display: none;"
    type="text"
  />
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      提交并发布
    </span>
  </button>
</form>
`;

exports[`ProForm 📦 submitter props support resetButtonProps 1`] = `
<form
  autocomplete="off"
  class="ant-form ant-form-vertical"
>
  <input
    style="display: none;"
    type="text"
  />
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn test_button"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`ProForm 📦 submitter props support submitButtonProps 1`] = `
<form
  autocomplete="off"
  class="ant-form ant-form-vertical"
>
  <input
    style="display: none;"
    type="text"
  />
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          重 置
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-primary test_button"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
    </div>
  </div>
</form>
`;
